--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,4 +3,7 @@ VERSION 0  TEST-RELEASE
 =======================
 
    Version 0.0 - test-release
+      04/06/2015 19:07  0.0.2  self-update capability
+         d79009e read version from versioned file
+         3f9693f added self-update capability
       04/06/2015 17:44  0.0.1  initial release
