--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,8 @@ VERSION 0  TEST-RELEASE
 =======================
 
    Version 0.1 - own builder structure started
+      07/06/2015 19:10  0.1.1  fix so it finds scripts
+         db69a28 find bin/script
       07/06/2015 18:44  0.1.0  initial release
          e5e86ea moved building to basic builder, also exclude existing .phar files and vcs directories
          103ea77 removing the phar-composer code, rebuilding own solution
