--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,8 @@ VERSION 0  TEST-RELEASE
 =======================
 
    Version 0.1 - own builder structure started
+      04/11/2015 11:30  0.1.3  dependency update
+         dc7dbc6 dependency update
       07/06/2015 19:20  0.1.2  more informative about updates
          4d43469 be a bit more informative about the update
       07/06/2015 19:10  0.1.1  fix so it finds scripts
