--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,9 @@ VERSION 0  TEST-RELEASE
 =======================
 
    Version 0.1 - own builder structure started
+      23/03/2016 09:57  0.1.4  dependency update
+         22bbb4c updated dependencies
+         d69b2a1 --no-dev
       04/11/2015 11:30  0.1.3  dependency update
          dc7dbc6 dependency update
       07/06/2015 19:20  0.1.2  more informative about updates
